Fixing of Promo Spacing, Padding, Footer

--- a/src/scss/pages/_promo-team.scss
+++ b/src/scss/pages/_promo-team.scss
@@ -1,3 +1,7 @@
+#team-container{
+    padding-bottom: 1.25em;
+}
+ 
  #team-container {
     // Hero Section 
 
@@ -43,9 +47,9 @@
     }
 
 
-    //I cannot get this to center
+
     #team-description {
-        width: 80%;
+        width: 100%;
         text-align: center;
         margin: 0 auto;
         display: inline-block;
@@ -78,7 +82,9 @@
             display: flex;
             flex-direction: row;
             gap: 1rem;
-            width: 100%;
+            max-width: 678px;
+            margin-left: auto;
+            margin-right: auto;
 
             .team-portrait {
                 display: block;
